Ensure modal content is centered on mobile

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -219,3 +219,9 @@ body {
     display: none;
   }
 }
+
+@media (max-width: 576px) {
+	.modal-dialog {
+		margin: 0.5rem auto;
+	}
+}
